--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
             "driver": "PostgreSQL",
             "name": "nfl",
             "database": "nfl",
-            "username": "etleyden"
+            "username": "postgres"
         }
     ]
 }
